fix search overlap with hero

--- a/static/style.css
+++ b/static/style.css
@@ -1950,7 +1950,7 @@ body.pub-details-open {
     margin-left: -50vw;
     margin-right: -50vw;
     padding: 0 var(--space-lg);
-    min-height: calc(100vh - 350px); /* Take up remaining screen space */
+    min-height: calc(100vh - 400px); /* Take up remaining screen space */
     display: flex;
     align-items: center;
 }
